 - Add built-in meshes UnitTriangle and UnitTetrahedron
 - Only create output directories when they don't exist
 - Make it impossible to set the linear algebra backend to something illegal
 - Overload value_shape instead of dim for userdefined Python Expressions
 - Permit unset parameters
 - Search only for BLAS library (not cblas.h)
0.9.9 [2010-09-01]
 - Change build system to CMake
 - Add named MeshFunctions: VertexFunction, EdgeFunction, FaceFunction, FacetFunction, CellFunction
 - Allow setting constant boundary conditions directly without using Constant
 - Allow setting boundary conditions based on string ("x[0] == 0.0")
 - Create missing directories if specified as part of file names
 - Allow re-use of preconditioners for most backends
 - Fixes for UMFPACK solver on some 32 bit machines
 - Provide access to more Hypre preconditioners via PETSc
 - Updates for SLEPc 3.1
 - Improve and implement re-use of LU factorizations for all backends
 - Fix bug in refinement of MeshFunctions
0.9.8 [2010-07-01]
 - Optimize and improve StabilityAnalysis.
 - Use own implementation of binary search in ODESolution (takes advantage of
   previous values as initial guess)
 - Improve reading ODESolution spanning multiple files
 - Dramatic speedup of progress bar (and algorithms using it)
 - Fix bug in writing meshes embedded higher dimensions to M-files
 - Zero vector in uBLASVector::resize() to fix spurious bug in Krylov solver
 - Handle named fields (u.rename()) in VTK output
 - Bug fix in computation of FacetArea for tetrahedrons
 - Add support for direct plotting of Dirichlet boundary conditions: plot(bc)
 - Updates for PETSc 3.1
 - Add relaxation parameter to NewtonSolver
 - Implement collapse of renumbered dof maps (serial and parallel)
 - Simplification of DofMapBuilder for parallel dof maps
 - Improve and simplify DofMap
 - Add Armadillo dependency for dense linear algebra
 - Remove LAPACKFoo wrappers
 - Add abstract base class GenericDofMap